--- a/TrabajoPracticoFinalSegundo/Pantallas/PantallaPhoto.resx
+++ b/TrabajoPracticoFinalSegundo/Pantallas/PantallaPhoto.resx
@@ -63,4 +63,7 @@
   <metadata name="BuscarFoto.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>104, 17</value>
   </metadata>
+  <metadata name="TimerCamara.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>216, 17</value>
+  </metadata>
 </root>
