--- a/TrabajoPracticoFinalSegundo/Pantallas/PantallaPhoto.resx
+++ b/TrabajoPracticoFinalSegundo/Pantallas/PantallaPhoto.resx
@@ -66,4 +66,7 @@
   <metadata name="TimerCamara.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>216, 17</value>
   </metadata>
+  <metadata name="comboBox1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
